# robotframework-openapidriver

./: .gitignore  COPYRIGHT.txt  README.md  README.rst  SETUP.md  backlog.md  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: README.md  _config.yml  advanced_use.md  index.html  openapidriver.html
src/OpenApiDriver/: __init__.py  dto_base.py  dto_utils.py  openapi_core.py  openapi_executors.libspec  openapi_executors.py  openapi_libcore.py  openapi_reader.py  openapidriver.libspec  openapidriver.py  value_utils.py
tests/: rf_cli.args  variables.py
tests/files/: mismatched_openapi.json
tests/server/: testserver.py
tests/suites/: load_from_invalid_source.robot  load_from_url.robot  load_json.robot  load_yaml.robot  test_mismatching_schemas.robot
tests/unittests/: test_openapi_reader.py  test_openapidriver.py  test_value_utils.py
tests/user_implemented/: custom_user_mappings.py
