[tool.poetry]
name="robotframework-openapidriver"
version = "4.3.0"
description = "A library for contract-testing OpenAPI / Swagger APIs."
license = "Apache-2.0"
authors = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
maintainers = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
readme =  "./docs/README.md"
homepage = "https://github.com/MarketSquare/robotframework-openapidriver"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Framework :: Robot Framework",
]
packages = [
    { include = "OpenApiDriver", from = "src" },
]
include = ["*.libspec"]

[tool.poetry.dependencies]
python = "^3.8"
robotframework-datadriver = ">=1.6.1"
robotframework-openapi-libcore = "^1.11.0"

[tool.poetry.group.dev.dependencies]
fastapi = ">=0.95.0"
uvicorn = ">=0.22.0"
invoke = ">=2.0.0"
coverage = {version=">=7.2.5", extras = ["toml"]}
robotframework-stacktrace = ">=0.4.1"

[tool.poetry.group.formatting.dependencies]
black = ">=22.10.0"
isort = ">=5.10.1"
robotframework-tidy = ">=3.4.0"

[tool.poetry.group.type-checking.dependencies]
mypy = ">=1.2.0"
pyright = ">=1.1.300"
types-requests = ">=2.28.11"
types-invoke = ">=2.0.0.6"

[tool.poetry.group.linting.dependencies]
pylint = ">=2.17.2"
ruff = ">=0.0.267"
robotframework-robocop = ">=2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "DataDriver.*",
    "prance.*",
    "robot.*",
    "openapi_core.*",
    "OpenApiLibCore.*",
    "uvicorn",
    "invoke",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
py_version=38

[tool.ruff]
line-length = 120
src = ["src/OpenApiDriver"]

[tool.ruff.lint]
select = ["E", "F", "PL"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["logging-fstring-interpolation", "missing-class-docstring"]

[tool.pylint.'FORMAT CHECKER']
max-line-length=120

[tool.pylint.'SIMILARITIES CHECKER']
ignore-imports="yes"

[tool.robotidy]
line_length = 120
spacecount = 4

[tool.robocop]
filetypes = [".robot", ".resource"]
configure = [
    "line-too-long:line_length:120",
    "too-many-calls-in-test-case:max_calls:15"
]
exclude = [
    "missing-doc-suite",
    "missing-doc-test-case",
    "missing-doc-keyword",
    "too-few-calls-in-test-case"
]
